--- a/css/main.css
+++ b/css/main.css
@@ -5455,16 +5455,9 @@ margin-top:calc(-50% + 15px);
   -o-transform: translate3d(0, 100%, 0);
   transform: translate3d(0, 100%, 0);
 }
-html {
-  height: 100% !important;
-}
 body {
-  height: 100%;
   font-size: 18px;
   line-height: 25px;
-}
-h1 {
-  color: red;
 }
 p {
   font-size: 18px;
@@ -5472,7 +5465,7 @@ p {
 }
 #heroforge {
   min-height: 100%;
-  background: #643e1b url("woodplanks.jpg") repeat;
+  background: #643e1b url("images/woodplanks.jpg") repeat;
   -webkit-box-shadow: inset 0px 0px 100px 20px rgba(24, 12, 1, 0.7);
   -moz-box-shadow: inset 0px 0px 100px 20px rgba(24, 12, 1, 0.7);
   box-shadow: inset 0px 0px 100px 20px rgba(24, 12, 1, 0.7);
@@ -5482,7 +5475,7 @@ p {
   padding-top: 52px;
 }
 .paper {
-  background: rgba(255, 238, 192, 0.9) url("paper-over.png") repeat;
+  background: rgba(255, 238, 192, 0.9) url("images/paper-over.png") repeat;
 }
 .paper .inner {
   -webkit-box-shadow: inset 0 0 60px 0 rgba(108, 78, 9, 0.3);
@@ -5581,8 +5574,8 @@ p {
 .hf-mode {
   width: 100%;
   height: 100%;
-  max-width: 720px;
-  padding: 10px;
+  max-width: 870px;
+  padding: 15px;
   padding-top: 20px;
   margin: 0 auto;
 }
@@ -5612,7 +5605,6 @@ p {
   padding: 20px;
 }
 .hf-mode.list ul {
-  display: inline-block;
   list-style: none;
   text-align: center;
 }
@@ -5627,10 +5619,9 @@ p {
 .hf-mode.list ul li {
   position: relative;
   display: inline-block;
-  margin: 10px;
-  margin-bottom: 15px;
-  width: 120px;
-  height: 120px;
+  margin: 10px 15px;
+  width: 180px;
+  height: 180px;
   cursor: pointer;
 }
 .hf-mode.list ul li:hover .avatar {
@@ -5638,7 +5629,7 @@ p {
   -moz-box-shadow: 0px -2px 5px 3px #fff7db;
   box-shadow: 0px -2px 5px 3px #fff7db;
 }
-.hf-mode.list ul li:hover .name {
+.hf-mode.list ul li:hover .info {
   -webkit-box-shadow: 0px 0px 8px 5px #fff7db;
   -moz-box-shadow: 0px 0px 8px 5px #fff7db;
   box-shadow: 0px 0px 8px 5px #fff7db;
@@ -5656,8 +5647,8 @@ p {
 }
 .hf-mode.list ul li .list-item .avatar {
   display: inline-block;
-  width: 90px;
-  height: 90px;
+  width: 110px;
+  height: 110px;
   overflow: hidden;
   background-color: #B8841D;
   position: relative;
@@ -5668,37 +5659,125 @@ p {
   left: 0px;
   display: block;
   content: "";
-  width: 90px;
-  height: 90px;
+  width: 110px;
+  height: 110px;
   border-radius: 50%;
-  background-image: url("paper-over.png");
+  background-image: url("images/paper-over.png");
   -webkit-box-shadow: inset -1px -2px 0px 0px rgba(24, 12, 1, 0.5);
   -moz-box-shadow: inset -1px -2px 0px 0px rgba(24, 12, 1, 0.5);
   box-shadow: inset -1px -2px 0px 0px rgba(24, 12, 1, 0.5);
 }
 .hf-mode.list ul li .list-item .avatar img,
 .hf-mode.list ul li .list-item .avatar svg {
-  width: 90px;
-  height: 90px;
+  width: 110px;
+  height: 110px;
 }
 .hf-mode.list ul li .list-item .avatar svg path {
   fill: #412603;
 }
-.hf-mode.list ul li .list-item .name {
-  font-family: 'Fontin', serif;
-  font-weight: bold;
+.hf-mode.list ul li .list-item .info {
   width: 100%;
-  margin-top: -15px;
+  margin-top: -20px;
 }
-.hf-mode.list ul li .list-item .name .inner {
-  padding: 10px;
-  padding-top: 15px;
-  font-size: 16px;
-  line-height: 14px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+.hf-mode.list ul li .list-item .info .inner {
+  padding: 10px 15px;
   -webkit-box-shadow: inset 0 0 20px 0 rgba(108, 78, 9, 0.3);
   -moz-box-shadow: inset 0 0 20px 0 rgba(108, 78, 9, 0.3);
   box-shadow: inset 0 0 20px 0 rgba(108, 78, 9, 0.3);
+}
+.hf-mode.list ul li .list-item .info .inner:before,
+.hf-mode.list ul li .list-item .info .inner:after {
+  content: " ";
+  display: table;
+}
+.hf-mode.list ul li .list-item .info .inner:after {
+  clear: both;
+}
+.hf-mode.list ul li .list-item .info .name {
+  font-family: 'Fontin', serif;
+  font-size: 20px;
+  line-height: 40px;
+  font-weight: bold;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.hf-mode.list ul li .list-item .info .details {
+  font-size: 16px;
+  line-height: 20px;
+}
+.hf-mode.list ul li .list-item .info .details .system {
+  float: right;
+}
+.hf-mode.list ul li .list-item .info .details .level {
+  font-weight: bold;
+  float: left;
+}
+@media screen and (max-width: 580px) {
+  .hf-mode.list ul {
+    width: 100%;
+  }
+  .hf-mode.list ul li {
+    display: block;
+    width: 100%;
+    height: 110px;
+    margin: 0px;
+    margin-bottom: 20px;
+  }
+  .hf-mode.list ul li .list-item {
+    text-align: left;
+    padding-left: 55px;
+  }
+  .hf-mode.list ul li .list-item .avatar,
+  .hf-mode.list ul li .list-item .info {
+    display: inline-block;
+  }
+  .hf-mode.list ul li .list-item .avatar {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+  }
+  .hf-mode.list ul li .list-item .info {
+    margin: 0px;
+    margin-top: 22px;
+  }
+  .hf-mode.list ul li .list-item .info .inner {
+    padding-left: 70px;
+  }
+}
+@media screen and (max-width: 380px) {
+  .hf-mode.list ul li {
+    height: 80px;
+  }
+  .hf-mode.list ul li .list-item {
+    padding-left: 40px;
+  }
+  .hf-mode.list ul li .list-item .avatar {
+    width: 80px;
+    height: 80px;
+  }
+  .hf-mode.list ul li .list-item .avatar img,
+  .hf-mode.list ul li .list-item .avatar svg {
+    width: 80px;
+    height: 80px;
+  }
+  .hf-mode.list ul li .list-item .avatar:after {
+    width: 80px;
+    height: 80px;
+  }
+  .hf-mode.list ul li .list-item .info {
+    margin-top: 10px;
+  }
+  .hf-mode.list ul li .list-item .info .inner {
+    padding: 10px 15px;
+    padding-left: 50px;
+  }
+  .hf-mode.list ul li .list-item .info .name {
+    font-size: 18px;
+    line-height: 30px;
+  }
+  .hf-mode.list ul li .list-item .info .details {
+    font-size: 14px;
+    line-height: 18px;
+  }
 }
