--- a/css/main.less
+++ b/css/main.less
@@ -8,19 +8,9 @@
 
 @import "../node_modules/material-ui/src/less/components.less";
 
-html {
-  height: 100% !important;
-}
-
 body {
-  height: 100%;
   font-size: 18px;
   line-height: 25px;
-}
-
-
-h1 {
-  color: red;
 }
 
 p {
@@ -44,9 +34,30 @@ p {
   }
 }
 
+.shine() {
+  &:before {
+    content: '';
+    position: absolute;
+    height: 160px;
+    width: 20px;
+    background: @shinecolor;
+    top: -40px;
+    left: -40px;
+    display: block;
+    // opacity: 0.6;
+    box-shadow: 0px 0px 30px 5px @shinecolor; 
+    transform: rotate(-40deg);
+    transition: all 0.5s ease;
+  }
+  &:hover:before {
+    top: -80px;
+    left: 120px;
+  }
+}
+
 #heroforge {
   min-height: 100%;
-  background: #643E1B url("./woodplanks.jpg") repeat;
+  background: #643E1B url("./images/woodplanks.jpg") repeat;
   //bg from: http://forum.unity3d.com/threads/free-handpainted-wood-planking-texture.128779/
   .lh-box-shadow(inset 0px 0px 100px 20px rgba(24, 12, 1, 0.7));
 }
@@ -57,7 +68,7 @@ p {
 }
 
 .paper {
-  background: rgba(255, 238, 192, 0.90) url("./paper-over.png") repeat;
+  background: rgba(255, 238, 192, 0.90) url("./images/paper-over.png") repeat;
   .inner {
     .lh-box-shadow(inset 0 0 60px 0 rgba(108, 78, 9, 0.30));
   }
@@ -151,8 +162,8 @@ p {
 .hf-mode {
   width: 100%;
   height: 100%;
-  max-width: 720px;
-  padding: 10px;
+  max-width: 870px;
+  padding: 15px;
   padding-top: 20px;
   margin: 0 auto;
 }
@@ -167,7 +178,7 @@ p {
 }
 
 
-@avatar-size: 90px;
+@avatar-size: 110px;
 
 .hf-mode.list {
   text-align: center;
@@ -193,17 +204,15 @@ p {
   }
   
   ul {
-    display: inline-block;
     list-style: none;
     text-align: center;
     .clearfix();
     li {
       position: relative;
       display: inline-block;
-      margin: 10px;
-      margin-bottom: 15px;
-      width: 120px;
-      height: 120px;
+      margin: 10px 15px;
+      width: 180px;
+      height: 180px;
       cursor: pointer;
       // transition: all 0.1s ease-out;
       &:hover {
@@ -211,7 +220,7 @@ p {
         .avatar {
           .lh-box-shadow(0px -2px 5px 3px rgba(255,247,219, 1));
         }
-        .name {
+        .info {
           .lh-box-shadow(0px 0px 8px 5px rgba(255,247,219, 1));
         }
         .mui-paper-container {
@@ -242,7 +251,7 @@ p {
             width: @avatar-size;
             height: @avatar-size;
             border-radius: 50%;
-            background-image: url("./paper-over.png");
+            background-image: url("./images/paper-over.png");
             .lh-box-shadow(inset -1px -2px 0px 0px rgba(24, 12, 1, 0.5));
           }
           img, svg {
@@ -255,21 +264,113 @@ p {
             }
           }
         }
-        .name {
-          font-family: @decorativeFontFamily;
-          font-weight: bold;
+        .info {
           width: 100%;
-          margin-top: -15px;
-          // transform: rotate(-2deg);
+          margin-top: -20px;
           .inner {
-            padding: 10px;
-            padding-top: 15px;
-            font-size: 16px;
-            line-height: 14px;
+            padding: 10px 15px;
+            // padding-top: 20px;
+            // padding-bottom: 10px;
+            .lh-box-shadow(inset 0 0 20px 0 rgba(108, 78, 9, 0.30));
+            .clearfix();
+          }
+          .name {
+            font-family: @decorativeFontFamily;
+            font-size: 20px;
+            line-height: 40px;
+            font-weight: bold;
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
-            .lh-box-shadow(inset 0 0 20px 0 rgba(108, 78, 9, 0.30));
+          }
+          .details {
+            font-size: 16px;
+            line-height: 20px;
+            .system {
+              float: right;
+            }
+            .level {
+              font-weight: bold;
+              float: left;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 580px) {
+  .hf-mode.list {
+    ul {
+      width: 100%;
+      li {
+        display: block;
+        width: 100%;
+        height: @avatar-size;
+        margin: 0px;
+        margin-bottom: 20px;
+        .list-item {
+          text-align: left;
+          padding-left: @avatar-size/2;
+          .avatar, .info {
+            display: inline-block;
+          }
+          .avatar {
+            position: absolute;
+            top: 0px;
+            left: 0px;
+          }
+          .info {
+            margin: 0px;
+            margin-top: 22px;
+            .inner {
+              padding-left: (@avatar-size/2) + 15px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+
+@media screen and (max-width: 380px) {
+  @avatar-size-small: 80px;
+  
+  .hf-mode.list {
+    ul {
+      li {
+        height: @avatar-size-small;
+        .list-item {
+          padding-left: @avatar-size-small/2;
+          .avatar {
+            width: @avatar-size-small;
+            height: @avatar-size-small;
+            img, svg {
+              width: @avatar-size-small;
+              height: @avatar-size-small;
+            }
+            ;
+            &:after {
+              width: @avatar-size-small;
+              height: @avatar-size-small;
+            }
+          }
+          .info {
+            margin-top: 10px;
+            .inner {
+              padding: 10px 15px;
+              padding-left: (@avatar-size-small/2) + 10px;
+            }
+            .name {
+              font-size: 18px;
+              line-height: 30px;
+            }
+            .details {
+              font-size: 14px;
+              line-height: 18px;
+            }
           }
         }
       }
