--- a/css/main.less
+++ b/css/main.less
@@ -318,6 +318,10 @@ p {
 
 
 @media screen and (max-width: 380px) {
+  .hf-mode.page {
+    padding: 6px;
+  }
+  
   @avatar-size-small: 80px;
   
   .hf-mode.list {
