--- a/css/main.less
+++ b/css/main.less
@@ -55,7 +55,11 @@ p {
 }
 
 #heroforge {
+  position: absolute;
+  top: 0px;
+  left: 0px;
   min-height: 100%;
+  width: 100%;
   background: #643E1B url("./images/woodplanks.jpg") repeat;
   //bg from: http://forum.unity3d.com/threads/free-handpainted-wood-planking-texture.128779/
   .lh-box-shadow(inset 0px 0px 100px 20px rgba(24, 12, 1, 0.7));
