Updated dependancies and fixed a few resulting issues

--- a/css/material-variables.less
+++ b/css/material-variables.less
@@ -9,11 +9,12 @@
 @body-text-color: #3a231a;
 @paper-color: #FFEEC0;
 
-
+// Brown
 @primary-1-color: #7a5023; // base
 @primary-2-color: #64411b; // darker
 @primary-3-color: #915f2a; // lighter
 
+// Grey
 @accent-1-color: #5a544c; // base
 @accent-2-color: #312d28; // darker
 @accent-3-color: #756d64; // lighter
