--- a/css/main.less
+++ b/css/main.less
@@ -62,7 +62,7 @@ p {
   width: 100%;
   background: #643E1B url("./images/woodplanks.jpg") repeat;
   //bg from: http://forum.unity3d.com/threads/free-handpainted-wood-planking-texture.128779/
-  .lh-box-shadow(inset 0px 0px 100px 20px rgba(24, 12, 1, 0.7));
+  box-shadow: inset 0px 0px 100px 20px rgba(24, 12, 1, 0.7);
 }
 
 .main-wrapper {
@@ -73,7 +73,7 @@ p {
 .paper {
   background: fade(@paper-color, 90%) url("./images/paper-over.png") repeat;
   .inner {
-    .lh-box-shadow(inset 0 0 60px 0 rgba(108, 78, 9, 0.30));
+    box-shadow: inset 0 0 60px 0 rgba(108, 78, 9, 0.30);
   }
 }
 
@@ -89,7 +89,7 @@ p {
   .inner {
     height: 100%;
     .v-center();
-    .lh-box-shadow(inset 0 0 20px 0 rgba(108, 78, 9, 0.30));
+    box-shadow: inset 0 0 20px 0 rgba(108, 78, 9, 0.30);
   }
   
   .menu-button {
@@ -209,10 +209,10 @@ p {
       &:hover {
         // transform: scale(1.04);
         .avatar {
-          .lh-box-shadow(0px -2px 5px 3px rgba(255,247,219, 1));
+          box-shadow: 0px -2px 5px 3px rgba(255,247,219, 1);
         }
         .info {
-          .lh-box-shadow(0px 0px 8px 5px rgba(255,247,219, 1));
+          box-shadow: 0px 0px 8px 5px rgba(255,247,219, 1);
         }
         .mui-paper-container {
           box-shadow: none;
@@ -243,7 +243,7 @@ p {
             height: @avatar-size;
             border-radius: 50%;
             background-image: url("./images/paper-over.png");
-            .lh-box-shadow(inset -1px -2px 0px 0px rgba(24, 12, 1, 0.5));
+            box-shadow: inset -1px -2px 0px 0px rgba(24, 12, 1, 0.5);
           }
           img, svg {
             width: @avatar-size;
@@ -264,7 +264,7 @@ p {
             padding: 10px 10px;
             padding-top: 10px;
             padding-bottom: 10px;
-            .lh-box-shadow(inset 0 0 20px 0 rgba(108, 78, 9, 0.30));
+            box-shadow: inset 0 0 20px 0 rgba(108, 78, 9, 0.30);
             .clearfix();
           }
           .name {
