--- a/css/main.css
+++ b/css/main.css
@@ -3082,6 +3082,23 @@ p {
     margin-top: 12px;
   }
 }
+#dialog-container .dialog .mui-dialog-window-contents {
+  background: rgba(255, 238, 192, 0.95) url("images/paper-over.png") repeat;
+}
+#dialog-container .dialog .mui-dialog-window-contents .mui-paper-container:before {
+  position: absolute;
+  content: "";
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  box-shadow: inset 0 0 60px 0 rgba(108, 78, 9, 0.3);
+}
+#dialog-container .dialog h3 {
+  font-family: 'Fontin', serif;
+  font-weight: bold;
+  text-align: center;
+}
 .spellbook .page {
   max-width: 500px;
 }
@@ -3141,4 +3158,28 @@ p {
   font-size: 14px;
   color: #915f2a;
   opacity: 1;
+}
+#dialog-container .dialog .mui-dialog-window-contents {
+  width: 90%;
+  max-width: 400px;
+}
+#dialog-container .dialog .mui-dialog-window-contents .mui-dialog-content {
+  padding-top: 10px;
+}
+#dialog-container .dialog.mui-is-shown .mui-dialog-window-contents {
+  transform: translate3d(0, 10%, 0);
+}
+#dialog-container .dialog .type {
+  color: rgba(58, 35, 26, 0.7);
+  font-size: 20px;
+  font-style: italic;
+  text-align: center;
+}
+#dialog-container .dialog .details {
+  list-style: none;
+  padding-top: 6px;
+  margin-bottom: 14px;
+}
+#dialog-container .dialog .details .name {
+  font-weight: bold;
 }
